fix code acp with ide
Signed-off-by: tzanlam <tzanlam@gmail.com>